      all auto-generated files outside the patch system.  Thanks, Julien
      Cristau.  (Closes: #491296)
    + [ADB] Migrate fields/* reading to use ::Collect::field().
  * checks/po-debconf{,.desc}:
    + [ADB] Check that at least one complete translation exists.  Thanks Jordà
      Polo.
  * checks/rules:
    + [ADB] Use ::Collect for field access.
  * checks/scripts{,.desc}:
    + [RA] Warn about maintainer scripts that prepend a path to commands.
      Based on a patch by Raphael Geissert.  (Closes: #376184)
    + [ADB] Don't read fields/*, scripts, index or file-info directly as the
      contents have almost certainly been cached in Lintian::Collect already.
    + [ADB] Update a couple of Policy references.  Thanks Jordà Polo.
  * checks/shared-libs.{,desc}:
    + [ADB] Improve the description of no-symbols-control-file.
    + [ADB] Migrate to using ::Collect instead of parsing the index, file-info
      and objdump-info files directly.
    + [ADB] Disable ldconfig-symlink-before-shlib-in-deb as it can never be
      tested correctly using the information currently available to the
      scripts
  * checks/watch-file:
    + [FL] Do not issue debian-watch-file-should-mangle-version for
      empty watch files.

  * data/doc-base/sections:
    + [ADB] Resynchronize with doc-base's section list (adding
      Programming/OCaml).  (Closes: #491440)

  * doc/desc-files:
    + [ADB] Update the description of tags to include experimental and info
      tags.
  * doc/README:
    + [ADB] Add -E / --show-experimental, -T / --tags and --tags-from-file
      to the option list.
  
  * frontend/lintian:
    + [FL, ADB] Add new --tags/-T option to limit the amount of checks
      run not by check names but by names of tags you're interested
      in.  Requested by Joerg Jaspert for ftpmaster.  (Closes: #493903)
    + [FL] Add --tags-from-file option to make it easier to specify
      a long list of tags.

  * lib/Lintian/Collect/Binary.pm: