@@ -1,0 +1,5 @@
+Testname: rules-dh-unused-target-nonempty
+Version: 1.0
+Description: Allow dh in unused targets, but nothing else
+Test-For: binary-arch-rules-but-pkg-is-arch-indep
+References: <20080806175819.GV11882@mail-vs.djpig.de>
